force-app/main/default/objects/zkups__UPSShipmateScheduledJobsSettings__c/fields/zkups__ScheduledTrackFriTracking__c.field-meta.xml
<CustomField>
    <fullName>zkups__ScheduledTrackFriTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Fri Tracking</label>
    <type>Checkbox</type>
</CustomField>