force-app/main/default/objects/zkups__UPSShipmateScheduledJobsSettings__c/fields/zkups__ScheduledTrackThursTracking__c.field-meta.xml
<CustomField>
    <fullName>zkups__ScheduledTrackThursTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Thurs Tracking</label>
    <type>Checkbox</type>
</CustomField>