force-app/main/default/objects/zkups__UPSShipmateScheduledJobsSettings__c/fields/zkups__ScheduledTrackTuesTracking__c.field-meta.xml
<CustomField>
    <fullName>zkups__ScheduledTrackTuesTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Track Tues Tracking</label>
    <type>Checkbox</type>
</CustomField>